# rustzx

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  LOG.md  README.md  a.patch  monorepo.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml  test-rustzx-test.yml  test-rustzx-z80.yml  zexall.yml
aym/: Cargo.toml
aym/src/: backends.rs  lib.rs
aym/src/backends/: precise.rs
rustzx/: Cargo.toml
rustzx-core/: Cargo.toml
rustzx-core/src/: error.rs  lib.rs  settings.rs
rustzx-core/src/emulator/: mod.rs  poke.rs
rustzx-core/src/emulator/fastload/: tap.rs
rustzx-core/src/emulator/loaders/: mod.rs  sna.rs  tap.rs
rustzx-core/src/emulator/screenshot/: mod.rs  scr.rs
rustzx-core/src/emulator/snapshot/: mod.rs  sna.rs  szx.rs
rustzx-core/src/emulator/snapshot/autoload/: mod.rs  tape_128k.sna  tape_48k.sna
rustzx-core/src/host/: frame_buffer.rs  io.rs  mod.rs
rustzx-core/src/utils/: clocks.rs  events.rs  instantflag.rs  mod.rs  screen.rs  smallnum.rs
rustzx-core/src/z80/: bus.rs  common_types.rs  cpu.rs  registers.rs
rustzx-core/src/z80/opcodes/: group_bits.rs  group_extended.rs  group_nonprefixed.rs  internal_alu.rs  internal_block.rs  internal_rot.rs  internal_stack.rs  mod.rs  types.rs
rustzx-core/src/z80/tables/: mod.rs
rustzx-core/src/zx/: constants.rs  controller.rs  events.rs  keys.rs  memory.rs  mod.rs
rustzx-core/src/zx/joy/: kempston.rs  mod.rs  sinclair.rs
rustzx-core/src/zx/machine/: mod.rs  specs.rs
rustzx-core/src/zx/mouse/: kempston.rs  mod.rs
rustzx-core/src/zx/roms/: mod.rs
rustzx-core/src/zx/screen/: border.rs  canvas.rs  colors.rs  mod.rs
rustzx-core/src/zx/sound/: ay.rs  beeper.rs  mixer.rs  mod.rs  sample.rs
rustzx-core/src/zx/tape/: empty.rs  mod.rs  tap.rs
rustzx-core/src/zx/video/: border.rs  colors.rs  mod.rs  screen.rs
rustzx-core/test/tapes/: simple.tap
rustzx-core/test_data/asset/: make.sh
rustzx-core/tests/integration/: framework.rs  main.rs  tape.rs
rustzx-test/: Cargo.toml
rustzx-test/benches/: z80test.rs
rustzx-test/src/: framework.rs
rustzx-test/test_data/: .gitignore  Overscan.szx  README.md  cybernoid_128k.szx  make.sh  nmi.szx
rustzx-test/test_data/asset/: .gitignore  make.sh  make_in_docker.cmd  make_in_docker.sh  simple_tape.tap  sound.128k.sna  sound.48k.sna
rustzx-test/test_data/asset/src/: loader_screen.bas  sound.c
rustzx-test/test_data/asset/src/simple_tape/: loading.scr
rustzx-test/test_data/src/: kempston_joy.c  keyboard.c  librustzx.c  librustzx.h  mouse.c
rustzx-test/tests/: diag_rom.rs  joy.rs  keyboard.rs  mouse.rs  snapshot.rs  sound.rs  tape.rs  z80test.rs
rustzx-utils/: Cargo.toml
rustzx-utils/src/: lib.rs  palette.rs  stopwatch.rs
rustzx-utils/src/io/: file.rs  gzip.rs  mod.rs
rustzx-z80/: Cargo.toml
rustzx-z80/src/: bus.rs  clocks.rs  codegen.rs  cpu.rs  lib.rs  registers.rs  smallnum.rs  utils.rs
rustzx-z80/src/opcode/: group_bits.rs  group_extended.rs  group_nonprefixed.rs  internal_alu.rs  internal_block.rs  internal_rot.rs  internal_stack.rs  mod.rs  types.rs
rustzx-z80/src/opcodes/: group_bits.rs  group_extended.rs  group_nonprefixed.rs  internal_alu.rs  internal_block.rs  internal_rot.rs  internal_stack.rs  types.rs
rustzx-z80/src/tables/: mod.rs
rustzx-z80/tests/integration/: main.rs  zexall.rs
rustzx-z80/tests/integration/assets/: zexall.z80
rustzx/src/: main.rs
rustzx/src/app/: mod.rs  rustzx.rs  settings.rs
rustzx/src/app/events/: events_sdl.rs  mod.rs  winit.rs
rustzx/src/app/sound/: mod.rs  sound_cpal.rs  sound_sdl.rs
rustzx/src/app/video/: mod.rs  palette.rs  shader.wgsl  video_sdl.rs  wgpu.rs
rustzx/src/backends/: mod.rs
rustzx/src/host/: frame_buffer.rs  io.rs  mod.rs
screenshots/: floatspy
src/: main.rs  settings.rs
src/app/: 48_test.rom  keyboard.rs  mod.rs  rustzx.rs  sound_thread.rs  video.rs
src/app/events/: events_sdl.rs  mod.rs
src/app/shaders/: frag.glsl  vert.glsl
src/app/sound/: mod.rs  sound_sdl.rs
src/app/video/: mod.rs  video_sdl.rs
src/backends/: mod.rs
src/cpu/: common_types.rs  mod.rs  registers.rs  z80.rs
src/cpu/decoders/: conditions.rs  mod.rs  registers.rs
src/cpu/tables/: clocks.rs  ioflags.rs  mod.rs
src/emulator/: mod.rs
src/emulator/loaders/: mod.rs  sna.rs  tap.rs
src/utils/: clocks.rs  events.rs  instantflag.rs  mod.rs  screen.rs  smallnum.rs
src/z80/: bus.rs  common_types.rs  cpu.rs  mod.rs  registers.rs
src/z80/opcodes/: group_bits.rs  group_extended.rs  group_nonprefixed.rs  internal_alu.rs  internal_block.rs  internal_io.rs  internal_nop.rs  internal_rot.rs  internal_stack.rs  mod.rs  types.rs
src/z80/tables/: clocks.rs  mod.rs  overflows.rs  parity.rs
src/zx/: beeper.rs  bus.rs  computer.rs  constants.rs  controller.rs  keys.rs  memory.rs  mod.rs  screen.rs  settings.rs
src/zx/joy/: kempston.rs
src/zx/machine/: mod.rs  mod.rs.bk  specs.rs  specs.rs.bk
src/zx/roms/: 48.rom  mod.rs
src/zx/screen/: border.rs  canvas.rs  colors.rs  mod.rs
src/zx/sound/: ay.rs  beeper.rs  mixer.rs  mod.rs  sample.rs
src/zx/tape/: mod.rs  tap.rs
vtx/: Cargo.toml
vtx/src/: lib.rs  player.rs
vtx/src/test/: csoon.vtx  secret.vtx  sil00.vtx  spf21_00.vtx
vtx/vtx-bin/: Cargo.toml
vtx/vtx-bin/src/: main.rs  wav.rs
