[workspace]
members = [
    "aym",
    "rustzx-core",
    "rustzx-test",
    "rustzx-utils",
    "rustzx-z80",
    "rustzx",
    "vtx",
    "vtx/vtx-bin",
]

[workspace.package]
version = "0.16.0"
license = "MIT"
edition = "2021"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
repository = "https://github.com/rustzx/rustzx"




[workspace.dependencies]
aym = { version = "0.16.0", path = "aym" }
rustzx-core = { version = "0.16.0", path = "rustzx-core" }
rustzx-utils = { version = "0.16.0", path = "rustzx-utils" }
rustzx-z80 = { version = "0.16.0", path = "rustzx-z80" }
vtx = { version = "0.16.0", path = "vtx" }
