[package]
name = "aym"
description = "AY/YM sound chip emulation library"
keywords = ["ay", "sound", "emulator", "no_std"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
num-traits = { version = "0.2", default-features = false }
libm = "0.2"
