[package]
name = "rustzx-core"
version = "0.14.0"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
description = "ZX Spectum emulator core library"
repository = "https://github.com/pacmancoder/rustzx"
keywords = ["emulator", "game", "z80", "no_std"]
license = "MIT"
edition = "2018"

[features]
default = []
full = ["ay", "precise-border", "embedded-roms", "autoload"]
precise-border = []
embedded-roms = []
sound = []
ay = ["aym", "sound"]
autoload = []

[dependencies]
bitflags = "1"
lazy_static = { version = "1", features = ["spin_no_std"] }
displaydoc = { version = "0.2", default-features = false }
from_variants = "0.6"
enum_dispatch = "0.3"
aym = { version = "0.1.1", path = "../aym", optional = true }
rustzx-z80 = { version = "0.14", path = "../rustzx-z80" }
