[package]
name = "rustzx-core"
version = "0.15.0"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
description = "ZX Spectrum emulator core library"
repository = "https://github.com/rustzx/rustzx"
keywords = ["emulator", "game", "z80", "no_std"]
license = "MIT"
edition = "2018"

[features]
default = []
full = ["ay", "precise-border", "embedded-roms", "autoload", "strum"]
precise-border = []
embedded-roms = []
sound = []
ay = ["aym", "sound"]
autoload = []

[dependencies]
bitflags = "1.3"
lazy_static = { version = "1.1", features = ["spin_no_std"] }
displaydoc = { version = "0.2", default-features = false }
from_variants = "0.6"
enum_dispatch = "0.3"
aym = { version = "0.15", path = "../aym", optional = true }
rustzx-z80 = { version = "0.15", path = "../rustzx-z80" }
strum = { version = "0.22", default-features = false, features = ["derive"], optional = true }
