[package]
name = "rustzx-core"
description = "ZX Spectrum emulator core library"
keywords = ["emulator", "game", "z80", "no_std"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
full = ["ay", "precise-border", "embedded-roms", "autoload", "strum", "zlib"]
precise-border = []
embedded-roms = []
sound = []
ay = ["aym", "sound"]
autoload = []
zlib = ["flate2"]

[dependencies]
bitflags = "1.3"
lazy_static = { version = "1.1", features = ["spin_no_std"] }
displaydoc = { version = "0.2", default-features = false }
from_variants = "0.6"
enum_dispatch = "0.3"
aym = { workspace = true, optional = true }
rustzx-z80 = { workspace = true }
strum = { version = "0.22", default-features = false, features = [
    "derive",
], optional = true }
flate2 = { version = "1.0", optional = true }
