[package]
name = "rustzx-test"
publish = false
description = "RustZX emulator integration tests"

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bench]]
name = "z80test"
harness = false

[dependencies]
anyhow = "1.0"
base64 = "0.13"
expect-test = "1.1"
nanoid = "0.4"
png = "0.16"
rustzx-core = { workspace = true, features = ["full"] }
rustzx-utils = { workspace = true, features = ["std"] }
sha2 = "0.9"
wav = "1.0"

[dev-dependencies]
threadpool = "1.8"
colored = "2.0"

[features]
default = []
save-test-data = []
