[package]
name = "rustzx-utils"
version = "0.15.0"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
description = "Additional helpers for rustzx-core based emulators"
repository = "https://github.com/rustzx/rustzx"
keywords = ["rustzx", "emulator", "no_std"]
license = "MIT"
edition = "2018"

[dependencies]
rustzx-core = { version = "0.15", path = "../rustzx-core" }
log = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = []
std = [ "log", "flate2" ]
