[package]
name = "rustzx-utils"
description = "Additional helpers for rustzx-core based emulators"
keywords = ["rustzx", "emulator", "no_std"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustzx-core = { workspace = true }
log = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = []
std = [ "log", "flate2" ]
