[package]
name = "rustzx"
description = "ZX Spectrum emulator"
readme = "../README.md"
keywords = ["emulator", "game", "z80"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
cpal = { version = "0.15", default-features = false }
log = "0.4"
pollster = "0.3"
ringbuf = "0.3"
rustzx-core = { workspace = true, features = ["full"] }
rustzx-utils = { workspace = true, features = ["std"] }
simple_logger = "2"
structopt = "0.3"
strum = { version = "0.22", default-features = false, features = ["derive", "std"] }
thiserror = "1"
wgpu = { version = "0.15", features = ["trace"] }
winit = "0.28"

[features]
default = []
