[package]
name = "rustzx"
description = "ZX Spectrum emulator"
readme = "../README.md"
keywords = ["emulator", "game", "z80"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = ["unsafe_textures", "bundled", "static-link"] }
rustzx-core = { workspace = true, features = ["full"] }
rustzx-utils = { workspace = true, features = ["std"] }
log = "0.4"
anyhow = "1.0"
structopt = "0.3"
strum = { version = "0.22", default-features = false, features = ["derive", "std"] }
simple_logger = "2"
cpal = { version = "0.15", default-features = false, optional = true }
ringbuf = { version = "0.3", optional = true }

[features]
default = ["sound-cpal"]
# cpal requires ALSA development headers on Linux, if this feature
# is disabled, RustZX will be built only with SDL audio backend support
sound-cpal = ["cpal", "ringbuf"]


#[dev-dependencies]
#cmake = "0.1.48"
