[package]
name = "vtx"
version = "0.1.0"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"
keywords = ["ay", "sound", "vtx", "parser"]

[dependencies]
delharc = { version = "0.3", default-features = false }
thiserror = "1"
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
ayumi = { git = "https://github.com/pacmancoder/rust-ayumi.git", rev = "9e57902" }

[dev-dependencies]
expect-test = "1"
sha2 = "0.9"
