[package]
name = "vtx"
version = "0.15.0"
description = "VTX sound format parsing and playback library"
authors = ["The RustZX contributors", "Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"
keywords = ["ay", "sound", "vtx", "parser"]
license = "MIT"
repository = "https://github.com/rustzx/rustzx"

[dependencies]
delharc = { version = "0.3", default-features = false }
thiserror = "1.0"
byteorder = "1.4"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
aym = { version = "0.15", path = "../aym" }

[dev-dependencies]
expect-test = "1.1"
sha2 = "0.9"
