[package]
name = "vtx"
description = "VTX sound format parsing and playback library"
keywords = ["ay", "sound", "vtx", "parser"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
delharc = { version = "0.3", default-features = false }
thiserror = "1.0"
byteorder = "1.4"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
aym = { workspace = true }

[dev-dependencies]
expect-test = "1.1"
sha2 = "0.9"
