[package]
name = "vtx-bin"
description = "VTX sound format toolbox"
keywords = ["emulator", "ay", "sound", "vtx"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "vtx"
path = "src/main.rs"

[dependencies]
vtx = { workspace = true }
structopt = "0.3"
wav = "1.0"
anyhow = "1.0"
